# maze_game

./: CMakeLists.txt  LR Code Exercise.docx  LR Code Exercise.odt  README.md  README.txt
configuration/: map.xml  map_from_docs.xml  scenario_1.txt  scenario_from_docs.txt
src/: graph.cpp  graph.hpp  main.cpp  node.cpp  node.hpp  parse_map.cpp  parse_map.hpp  parse_scenario.cpp  parse_scenario.hpp  string_utility.cpp  string_utility.hpp  world_explorer.cpp  world_explorer.hpp
test/: map.xml.impl  test.cmake  test_graph.cpp  test_main.cpp  test_node.cpp  test_pugixml_api.cpp  test_pugixml_disabled.cpp  test_scenario_0.cpp  test_scenario_1.cpp  test_world_explorer.cpp
